@@ -1,5 +1,11 @@
 2002-09-08  John Levon  <levon@movementarian.org>
 
+	* QMathDialog.C:
+	* iconpalette.h:
+	* iconpalette.C: re lay out on size change
+ 
+2002-09-08  John Levon  <levon@movementarian.org>
+
 	* QMathDialog.h:
 	* QMathDialog.C:
 	* iconpalette.C: More fixes.
